--- a/sass/filter.scss
+++ b/sass/filter.scss
@@ -3,7 +3,7 @@
 	
 	width: 100%;
 	
-gap : 10px;
+
 	.cat-format{
 		display: flex;
 		width: 50%;
@@ -15,184 +15,159 @@ gap : 10px;
 
 			
 		}
-		option:nth-child(1){
-			&:hover{
-				background-color: red;
-			}
-		}
+	
 	}
 
-	select:first-child
-	&:hover{
-		background-color: red;
-	}
-
-	.container-date{
-		display: flex;
-		justify-content: end;
+	#categorie-filter {
 		width: 50%;
-		
-		@media screen and (max-width : 576px) {
-			display: block;
-			width: 100%;
+		/* border: 1px solid black; */
+			 }
+		.select-btn{
+		border: 2px solid #D8D8D8;
+		display: flex;
+		justify-content: space-between;
+		padding-left: 10px;
+		padding-bottom: 10px;
+		padding-top: 10px;
+		border-radius: 5px;
+		cursor: pointer;
+		&:hover {
+			border: 2px solid blue;
 		}
+		} 
 		
-	}
-
-	@media screen and (max-width : 576px) {
-		display: block;
-	
-	}
-
-}
-
-
-
-
-
-#format-filter{
-	position: relative;
-    display: flex;
-	width: 45%;
-    height: 45px;
-    background: #fff;
-    padding: 5px;
-    padding-left: 15px;
-    padding-right: 15px;
-    border-radius: 8px;
-    border: 2px solid #D8D8D8;
-    align-items: center;
-    cursor: pointer;
-    justify-content: space-between;
-	&:hover{
-		border: 2px solid blue;
-	}
-
-	@media screen and (max-width : 576px) {
-	
-		width: 100%;
+			.chevron{
+			
+				display: flex;
+				align-items: flex-end;
+				height: 20px;
+				padding-right: 10px;
+				transition: 0.3s;
+			
+			}
+			}
 		
-	}
-		option{
-			text-transform: uppercase;
-			padding-bottom: 50px;
-			margin-top: 30px;
-			margin-bottom: 30px;
+			
+			#categorie-list {
+				list-style: none;
+				padding: 0;
+				margin: 0;
+				display: none;
+				
+				z-index: 999; 
+			border-radius: 4px;
+			width: 100%;
+			background-color: red;
+				animation: fadeInDown 3s ease-in-out;
 		
-			&:hover{
-				background-color: red;
-				color : red;
+			}
+				
+				
+		
+				.option {
+					padding-bottom: 10px;
+					padding-top: 10px;
+					padding-left: 10px;
+					cursor: pointer;
+		
+		
+		
+					
+					&:hover{
+						background-color: red;
+					} 
+		
+				}
+		
+		
+		
+		 #categorie-filter.active {
+			.select-btn {
+				img {
+					transform: rotate(-180deg);
+		
+				}
+			}
+			#categorie-list{
+				display: block;
+				opacity: 0;
+		
+				animation: fadeInUp 2s forwards;
 				
 			}
 		}
+		 @keyframes fadeInDown {
+			from {
+				transform: translateY(0);
+				/* Anciennement translate3d(0, 0, 0); */
+				 opacity: 1;
+			} 
 		
-	}
-	#categorie-filter{
-		position: relative;
-		display: flex;
-		width: 45%;
-		height: 45px;
-		background: #fff;
-		padding: 5px;
-		padding-left: 15px;
-		padding-right: 15px;
-		border-radius: 8px;
-		border: 2px solid #D8D8D8;
-		align-items: center;
-		cursor: pointer;
-		justify-content: space-between;
-		&:hover{
-			border: 2px solid blue;
-		}
-
-		@media screen and (max-width : 576px) {
-	
-			width: 100%;
-			
-		}
-		option{
-			text-transform: uppercase;
-			padding-bottom: 50px;
-			margin-top: 30px;
-			margin-bottom: 30px;
+			to {
+			transform: translateY(20px);
+				/* Anciennement translate3d(0, 20px, 0); */
+				opacity: 0;
+			}
 		
-	}}
-
-
-	#sort-filter{
-		position: relative;
-		display: flex;
-		width: 45%;
-		height: 45px;
-		background: #fff;
-		padding: 5px;
-		padding-left: 15px;
-		padding-right: 15px;
-		border-radius: 8px;
-		border: 2px solid #D8D8D8;
-		align-items: center;
-		cursor: pointer;
-		justify-content: space-between;
-		&:hover{
-			border: 2px solid blue;
 		}
-
-		@media screen and (max-width : 576px) {
-	
-			width: 100%;
-		}
-		option{
-			text-transform: uppercase;
-			padding-bottom: 50px;
-			margin-top: 30px;
-			margin-bottom: 30px;
+		@keyframes fadeInUp {
+			from {
+				transform: translateY(-30px);
+				/* Anciennement translate3d(0, 30px, 0); */
+			}
 		
-	}
-}
-	
-$background-color_1: red;
-select#format-filter {
-	option {
-		&:nth-child(1) {
-			&:hover {
-				background-color: $background-color_1 !important;
+			to {
+				transform: translateY(0);
+				/* Anciennement translate3d(0, 0, 0); */
+				opacity: 1; 
 			}
 		}
-	}
-}
 
+
+
+
+
+
+
+
+
+	
+
+
+/* 
 
 
 @keyframes fadeInUp {
   from {
     transform: translateY(-30px); /* Anciennement translate3d(0, 30px, 0); */
-  }
-  to {
-    transform: translateY(0); /* Anciennement translate3d(0, 0, 0); */
-    opacity: 1;
-  }
-}
+ // }
+ // to {
+   // transform: translateY(0); /* Anciennement translate3d(0, 0, 0); */
+   // opacity: 1;
+ // }
+//}
 
-
+/* 
 @keyframes fadeInDown {
   from {
     transform: translateY(0); /* Anciennement translate3d(0, 0, 0); */
-    opacity: 1;
-  }
-  to {
-    transform: translateY(20px); /* Anciennement translate3d(0, 20px, 0); */
-    opacity: 0;
-  }
+ //   opacity: 1;
+ // }
+ // to {
+   // transform: translateY(20px); /* Anciennement translate3d(0, 20px, 0); */
+   // opacity: 0;
+ // }
 
-}
+//} 
 
-.container-filtre{
+ .container-filtre{
 	margin-left: 100px;
 	margin-right: 100px;
 	
 	margin-top: 80px;
 	
 }
+/*
 #filter{
 width: 100%;
 display: flex;
@@ -291,7 +266,13 @@ width: 25%;
     animation: fadeInUp 2s forwards;
 
   }
-}
+} */
+
+
+
+
+
+
 
 
 
@@ -396,3 +377,12 @@ width: 25%;
 		-webkit-animation-fill-mode: both;
 	}
 } */
+
+
+
+
+
+
+
+
+
