--- a/sass/lightbox.scss
+++ b/sass/lightbox.scss
@@ -41,19 +41,25 @@ display: none;
   }
 
   .lightbox-contain{
-    position: fixed;
+     position: fixed;
     width: 50%;
     margin: auto;
     max-width: 1200px;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
-   
+    transform: translate(-50%, -50%); 
+  /*  display: flex;
+   justify-content: center;
+   align-items: center;
+   margin-left: 200px;
+   margin-right: 200px; */
      img {
 
     width: 100%;
     max-width: 100%;
-  
+    height: 100vh;
+   /*   max-width: 100%;
+    height: 100vh; */
 
   }
   }}
