--- a/sass/filter.scss
+++ b/sass/filter.scss
@@ -11,9 +11,7 @@
 		@media screen and (max-width : 576px) {
 			display: block;
 			width: 100%;
-			padding-bottom: 15px;
-
-			
+			padding-bottom: 15px;	
 		}
 	
 	}
@@ -42,7 +40,7 @@
 				align-items: flex-end;
 				height: 20px;
 				padding-right: 10px;
-				transition: 0.3s;
+				transition: 0.6s;
 			
 			}
 			}
@@ -57,7 +55,7 @@
 				z-index: 999; 
 			border-radius: 4px;
 			width: 100%;
-			background-color: red;
+			border-radius: 4px;
 				animation: fadeInDown 3s ease-in-out;
 		
 			}
@@ -84,7 +82,7 @@
 		 #categorie-filter.active {
 			.select-btn {
 				img {
-					transform: rotate(-180deg);
+					transform: rotate(180deg);
 		
 				}
 			}
@@ -99,13 +97,13 @@
 		 @keyframes fadeInDown {
 			from {
 				transform: translateY(0);
-				/* Anciennement translate3d(0, 0, 0); */
+				
 				 opacity: 1;
 			} 
 		
 			to {
 			transform: translateY(20px);
-				/* Anciennement translate3d(0, 20px, 0); */
+				
 				opacity: 0;
 			}
 		
@@ -113,23 +111,125 @@
 		@keyframes fadeInUp {
 			from {
 				transform: translateY(-30px);
-				/* Anciennement translate3d(0, 30px, 0); */
+			
 			}
 		
 			to {
 				transform: translateY(0);
-				/* Anciennement translate3d(0, 0, 0); */
+				
 				opacity: 1; 
 			}
 		}
 
 
+//btn format
 
 
 
 
+#format-filter {
+	width: 50%;
+	/* border: 1px solid black; */
+		 }
+	.btn-format{
+	border: 2px solid #D8D8D8;
+	display: flex;
+	justify-content: space-between;
+	padding-left: 10px;
+	padding-bottom: 10px;
+	padding-top: 10px;
+	border-radius: 5px;
+	cursor: pointer;
+	&:hover {
+		border: 2px solid blue;
+	}
+	} 
+	
+		.chevron{
+		
+			display: flex;
+			align-items: flex-end;
+			height: 20px;
+			padding-right: 10px;
+			transition: 0.6s;
+		
+		}
+		
+	
+		
+		#format-list {
+			list-style: none;
+			padding: 0;
+			margin: 0;
+			display: none;
+			
+			z-index: 999; 
+		border-radius: 4px;
+		width: 100%;
+		border-radius: 4px;
+			animation: fadeDown 3s ease-in-out;
+	
+		}
+			
+			
+	
+			.options {
+				padding-bottom: 10px;
+				padding-top: 10px;
+				padding-left: 10px;
+				cursor: pointer;
+	
 
-
+				
+				&:hover{
+					background-color: red;
+				} 
+	
+			}
+	
+	
+	
+	 #format-filter.active {
+		.btn-format {
+			img {
+				transform: rotate(180deg);
+	
+			}
+		}
+		#format-list{
+			display: block;
+			opacity: 0;
+	
+			animation: fadeUp 2s forwards;
+			
+		}
+	}
+	 @keyframes fadeDown {
+		from {
+			transform: translateY(0);
+			
+			 opacity: 1;
+		} 
+	
+		to {
+		transform: translateY(20px);
+			
+			opacity: 0;
+		}
+	
+	}
+	@keyframes fadeUp {
+		from {
+			transform: translateY(-30px);
+		
+		}
+	
+		to {
+			transform: translateY(0);
+			
+			opacity: 1; 
+		}
+	}
 
 	
 
