--- a/sass/home.scss
+++ b/sass/home.scss
@@ -16,7 +16,11 @@ gap : 5px;
    
   }
     
-  
+  @media screen and (max-width:580px) {
+
+    margin-left: 40px;
+    margin-right: 40px;
+}
    
  
     .container-row {
