--- a/sass/main.scss
+++ b/sass/main.scss
@@ -99,7 +99,10 @@ a {
         @media screen and (max-width:580px) {
 
             flex-direction: column;
+            margin-top: 30px;
+            margin-right: 0;
         }
+     
 
 
 
@@ -107,6 +110,10 @@ a {
             margin: 25px;
             margin-bottom: 10px;
             margin-top: 10px;
+            @media screen and (max-width:580px) {
+
+                padding-top: 15px;
+            }
 
             a {
                 color: black;
@@ -119,7 +126,12 @@ a {
 
     .textFooter {
         margin-top: 10px;
-
+        @media screen and (max-width:580px) {
+          
+            padding-bottom: 40px;
+            padding-top: 15px;
+        }
+     
     }
 
 
