--- a/sass/single.scss
+++ b/sass/single.scss
@@ -44,6 +44,11 @@ box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px; */
 
             .meta {
                 margin-bottom: 10px;
+                @media screen and (max-width: 589px){
+                    
+                   margin-right: 70px;
+                   margin-left: 70px;
+                }
             }
 
             .date {
@@ -58,6 +63,11 @@ box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px; */
 @media screen and (max-width: 400px){
 font-size: 25px;
 }
+@media screen and (max-width: 589px){
+    
+   margin-right: 70px;
+   margin-left: 70px;
+}
     
 }
         }
@@ -66,6 +76,7 @@ font-size: 25px;
     .container-img {
         // margin-right: 100px;
         width: 50%;
+        height: 100vh;
         @media screen and (max-width: 589px){
             width: 100%;
             margin-left: 70px;
@@ -77,10 +88,26 @@ font-size: 25px;
             display: flex;
             width: 100%;
             height: 100vh;
+            
         }
         @media screen and (max-width: 530px){
 
         }
+        .fullscreen-icon{
+            display: none;
+               font-size: 50px;
+               height: 20px;
+               position: absolute;
+               top: 27%;
+               right: 10%;
+               transform: translate(-50%, -50%);
+               z-index : 999;
+               cursor: pointer;
+             &:hover{
+                
+                     display: block;
+             }
+             }
 
         .attachment-large {
             width: 100%;
@@ -90,6 +117,7 @@ font-size: 25px;
           
             
         }
+       
     }
 }
 
@@ -242,8 +270,8 @@ font-size: 25px;
     margin-right: 100px;
  
     @media screen and (max-width: 589px){
-        margin-left: 70px;
-        margin-right: 70px;
+        margin-left: 40px;
+        margin-right: 40px;
     }
 
 }
@@ -272,7 +300,7 @@ font-size: 25px;
   grid-template-columns: 50% 50%; /* Définit deux colonnes, chacune avec une largeur de 50% */
   gap : 15px;
   flex-wrap: wrap;
-    
+
 
   @media screen and (max-width : 576px) {
     grid-template-columns: 1fr;
