--- a/sass/home.scss
+++ b/sass/home.scss
@@ -35,7 +35,7 @@ gap : 5px;
      /* L'espace est soustrait pour prendre en compte l'espacement entre les colonnes */
      /* Ajustez la largeur selon vos préférences */
    }
-   .attachment-large {
+   .photoLightbox {
     width: 100%;
     /* La moitié de la largeur du viewport */
     height: 40vw;
