--- a/sass/filter.scss
+++ b/sass/filter.scss
@@ -1,34 +1,69 @@
+.container-filtre{
+	margin-left: 100px;
+	margin-right: 100px;
+	
+	margin-top: 80px;
+	@media screen and (max-width : 580px) {
+		
+		margin-left: 40px;
+		margin-right: 40px;
+		
+	}
+	
+ }
+
+
+
 #container-filter{
 	display: flex;
-	
+
 	width: 100%;
 	
+
+		@media screen and (max-width : 768px) {
+			display: block;
+			
+		}
 
 	.cat-format{
 		display: flex;
 		width: 50%;
 		justify-content: space-between;
-		@media screen and (max-width : 576px) {
+		
+		@media screen and (max-width : 768px) {
 			display: block;
 			width: 100%;
 			padding-bottom: 15px;	
 		}
 	
 	}
+	
 
 	#categorie-filter {
-		width: 50%;
+	
+
+		width: 45%;
+		position: relative;
 		/* border: 1px solid black; */
+		@media screen and (max-width : 768px) {
+		
+			width: 100%;
+			padding-bottom: 15px;
+			
+		}
 			 }
 		.select-btn{
+			
 		border: 2px solid #D8D8D8;
 		display: flex;
 		justify-content: space-between;
 		padding-left: 10px;
 		padding-bottom: 10px;
 		padding-top: 10px;
-		border-radius: 5px;
+		border-radius: 8px;
 		cursor: pointer;
+		font-family: 'poppins';
+	
 		&:hover {
 			border: 2px solid blue;
 		}
@@ -40,7 +75,7 @@
 				align-items: flex-end;
 				height: 20px;
 				padding-right: 10px;
-				transition: 0.6s;
+				transition: transform 0.6s;
 			
 			}
 			}
@@ -51,11 +86,13 @@
 				padding: 0;
 				margin: 0;
 				display: none;
-				
+				position: absolute;
 				z-index: 999; 
 			border-radius: 4px;
-			width: 100%;
+	width: 100%;
 			border-radius: 4px;
+
+background-color: white;
 				animation: fadeInDown 3s ease-in-out;
 		
 			}
@@ -67,6 +104,10 @@
 					padding-top: 10px;
 					padding-left: 10px;
 					cursor: pointer;
+					font-family: 'poppins';
+					text-transform: none;
+				
+				
 		
 		
 		
@@ -122,14 +163,22 @@
 		}
 
 
+
+
+
 //btn format
 
 
-
-
 #format-filter {
-	width: 50%;
+	width: 45%;
+	position: relative;
 	/* border: 1px solid black; */
+
+	@media screen and (max-width : 768px) {
+		
+		width: 100%;
+		
+	}
 		 }
 	.btn-format{
 	border: 2px solid #D8D8D8;
@@ -138,7 +187,8 @@
 	padding-left: 10px;
 	padding-bottom: 10px;
 	padding-top: 10px;
-	border-radius: 5px;
+	border-radius: 8px;
+	font-family: 'poppins';
 	cursor: pointer;
 	&:hover {
 		border: 2px solid blue;
@@ -162,7 +212,9 @@
 			padding: 0;
 			margin: 0;
 			display: none;
+			position: absolute;
 			
+				background-color: white;
 			z-index: 999; 
 		border-radius: 4px;
 		width: 100%;
@@ -178,7 +230,9 @@
 				padding-top: 10px;
 				padding-left: 10px;
 				cursor: pointer;
-	
+				font-family: 'poppins';
+				text-transform: none;
+				font-weight:500;
 
 				
 				&:hover{
@@ -231,9 +285,136 @@
 		}
 	}
 
+
+.flexEnd{
+	width: 50%;
+	display: flex;
+	justify-content: end;
+	@media screen and (max-width : 768px) {
+		
+		width: 100%;
+		
+	}
+}
+
+	// bton date
+	#container-date{
+		width: 45%;
+		position: relative;
 	
-
-
+		@media screen and (max-width : 768px) {
+		
+			width: 100%;
+			
+		}
+		/* border: 1px solid black; */
+			 
+			.btn-date{
+			border: 2px solid #D8D8D8;
+			display: flex;
+			justify-content: space-between;
+			padding-left: 10px;
+			padding-bottom: 10px;
+			padding-top: 10px;
+			border-radius: 8px;
+			font-family: 'poppins';
+			cursor: pointer;
+			&:hover {
+				border: 2px solid blue;
+			}
+			} 
+			
+				.chevron{
+				
+					display: flex;
+					align-items: flex-end;
+					height: 20px;
+					padding-right: 10px;
+					transition: transform 0.6s;
+				
+				}
+				}
+			
+				
+				#sort-filter {
+					list-style: none;
+					padding: 0;
+					margin: 0;
+					display: none;
+					
+					position: absolute;
+					z-index: 999; 
+				border-radius: 4px;
+				width: 100%;
+				border-radius: 4px;
+			background-color: white;
+					animation: fadeD 3s ease-in-out;
+			
+				}
+					
+					
+			
+					.optionDate{
+						padding-bottom: 10px;
+						padding-top: 10px;
+						padding-left: 10px;
+						cursor: pointer;
+			
+						font-family: 'poppins';
+						text-transform: none;
+						font-weight:500;
+			
+						
+						&:hover{
+							background-color: red;
+						} 
+			
+					}
+			
+			
+			
+			 #container-date.active {
+				.btn-date {
+					img {
+						transform: rotate(180deg);
+			
+					}
+				}
+				#sort-filter{
+					display: block;
+					opacity: 0;
+			
+					animation: fadeIn 2s forwards;
+					
+				}
+			}
+			 @keyframes fadeD {
+				from {
+					transform: translateY(0);
+					
+					 opacity: 1;
+				} 
+			
+				to {
+				transform: translateY(20px);
+					
+					opacity: 0;
+				}
+			
+			}
+			@keyframes fadeIn {
+				from {
+					transform: translateY(-30px);
+				
+				}
+			
+				to {
+					transform: translateY(0);
+					
+					opacity: 1; 
+				}
+			}
+	
 /* 
 
 
@@ -260,13 +441,7 @@
 
 //} 
 
- .container-filtre{
-	margin-left: 100px;
-	margin-right: 100px;
-	
-	margin-top: 80px;
-	
-}
+ 
 /*
 #filter{
 width: 100%;
