--- a/sass/lightbox.scss
+++ b/sass/lightbox.scss
@@ -28,6 +28,7 @@ display: none;
     color: white;
     text-transform: none;
    top: 50%;
+   cursor: pointer;
    
 
   }
@@ -37,6 +38,7 @@ display: none;
     text-transform: none;
     right: 0;
     top : 50%;
+    cursor: pointer;
   
   }
 
@@ -60,6 +62,15 @@ display: none;
     height:70vh;
    /*   max-width: 100%;
     height: 100vh; */
+    object-fit: cover;
 
+  }
+  .infoPhoto{
+    display: flex;
+    justify-content: space-between;
+    p{
+      color : white;
+      margin: 0;
+    }
   }
   }}
