--- a/sass/single.scss
+++ b/sass/single.scss
@@ -82,7 +82,22 @@ font-size: 25px;
             margin-left: 70px;
             margin-right: 70px;
         }
-
+        .fullscreen-icon{
+      
+            font-size: 50px;
+          height: 20px;
+          position: absolute;
+          top: 35%;
+          right: 10%;
+          transform: translate(-50%, -50%);
+          z-index : 999;
+        
+          cursor: pointer;
+        
+               &:hover{
+                  
+               }
+               }
 
         .post-image{
             display: flex;
@@ -93,28 +108,14 @@ font-size: 25px;
         @media screen and (max-width: 530px){
 
         }
-        .fullscreen-icon{
-            display: none;
-               font-size: 50px;
-               height: 20px;
-               position: absolute;
-               top: 27%;
-               right: 10%;
-               transform: translate(-50%, -50%);
-               z-index : 999;
-               cursor: pointer;
-             &:hover{
-                
-                     display: block;
-             }
-             }
+       
 
         .attachment-large {
             width: 100%;
           
          height: 100vh; 
              object-fit: cover;
-          
+            
             
         }
        
@@ -203,6 +204,8 @@ font-size: 25px;
 
         .txt-contact {
             text-transform: none;
+            font-family: 'poppins';
+            font-weight: 300;
             @media screen and (max-width: 513px){
                 margin-top: 25px;
             }
@@ -282,7 +285,7 @@ font-size: 25px;
     margin-right: 100px;
     margin-top: 70px;
     margin-bottom: 50px;
-
+  
     @media screen and (max-width: 589px){
       display: flex;
       justify-content: center;
@@ -298,7 +301,7 @@ font-size: 25px;
   */
   display: grid;
   grid-template-columns: 50% 50%; /* Définit deux colonnes, chacune avec une largeur de 50% */
-  gap : 15px;
+  gap : 5px;
   flex-wrap: wrap;
 
 
@@ -313,7 +316,7 @@ font-size: 25px;
     
        
 
-         .attachment-large {
+         .photoLightbox{
           /*   width: 40vw;
             /* La moitié de la largeur du viewport */
            // height: 40vw;
